# nmpde-projects

./: .gitignore  CMakeLists.txt  README.md
FK_solver/src/: FK_solver.hpp  main.cpp
gmsh/: 2d-flow.geo  2d-flow.vtk  3d-flow.geo  cube-inside-cube.geo  cube.geo  square-inside-square.geo  uncentered-cube.geo
include/: Cylinder.hpp  EthierSteinman.hpp  NavierStokes.hpp  Precondition.hpp  PreconditionerType.hpp  Problem.hpp  SolverOptions.hpp  Step.hpp  TestCase.hpp
mesh/: cilinder_2D.geo  cilinder_3D.geo_unrolled
mesh/output_mesh/: output-mesh-cube-40_0.pvtu
report/: bibliography.bib  main.tex
report/sections/: code.tex  conclusions.tex  correctness.tex  cylinder.tex  intro.tex  lift_drag.tex  model.tex  navier_stokes.tex  preconditioners.tex
results/: results.csv
scripts/: generate_2d.sh  generate_3d.sh  generate_all.sh  generate_cube.sh  generate_meshes.sh  load_mk.sh  plot_lift_drag.py
scripts/cluster_schedule/: 3dflow_asimple_amg_1.sub  3dflow_asimple_amg_10.sub  3dflow_asimple_amg_20.sub  3dflow_asimple_amg_5.sub  3dflow_asimple_amg_general.sub  3dflow_asimple_amg_inner_10.sub  3dflow_asimple_amg_inner_20.sub  3dflow_asimple_ilu_10.sub  3dflow_asimple_ilu_20.sub  3dflow_asimple_ilu_inner_10.sub  (+13 more)
src/: Assemble.cpp  Cylinder.cpp  EthierSteinman.cpp  FK_solver.hpp  LiftDrag.cpp  NavierStokes.cpp  NavierStokes.hpp  NavierStokes2D.cpp  NavierStokes2D.hpp  NavierStokes3D.cpp  NavierStokes3D.hpp  Output.cpp  Poisson3D_Parallel.cpp  Precondition.cpp  Problem.cpp  Setup.cpp  Solve.cpp  Step.cpp  TestCase.cpp  main.cpp  main2D.cpp  main3D.cpp
